fixed invisible textarea issue

--- a/src/theme/pfas/_colors.scss
+++ b/src/theme/pfas/_colors.scss
@@ -17,3 +17,9 @@
   color: #565B70 !important;
 }
 
+.textarea {
+  border-color: #ccc;
+    border-width: 1px;
+    border-style: dashed;
+    border-radius: 5px;
+}
